--- a/src/paginas/Catalogo.css
+++ b/src/paginas/Catalogo.css
@@ -15,7 +15,7 @@
   
   .boton-right-carrousel {
     position: absolute;
-    right: 0px;
+    right: 0;
     top: 45%;
   }
   
@@ -25,7 +25,7 @@
   
   .titulo-grande p {
     text-align:right;
-    font-weight: bold; /* Hacer el precio más destacado */
+    font-weight: bold; 
     font-size: 19px
   }
   
@@ -45,14 +45,8 @@
   }
   
   button {
-    position: absolute;
-    top: 31%;
-    transform: translatey(0%);
-    background-color:transparent;
+    background-color:rgba(0, 0, 0, 0.432);
     border: none;
-    padding: 0px;
-    cursor: pointer;
-    z-index: 1; /* Para que los botones estén por encima de las imágenes */
-    
+   
   }
   
