--- a/src/paginas/Login.css
+++ b/src/paginas/Login.css
@@ -1,31 +1,27 @@
 .login {
     display: flex;
-    justify-content: center; /* Centra el texto horizontalmente */
+    justify-content: center; 
     padding: 4%;
     background-color:transparent;
     font-size: 30px;
-    height: 100px; /* Ajusta el tamaño según sea necesario */
+    height: 100px; 
 }
-
 
 .datos{
     align-items: center;
     display: flex;
     background-color: transparent;
-    flex-direction: column; /* Cambia a columna para que los grupos estén uno debajo del otro */
+    flex-direction: column; 
     height: auto;
-
-
 }
-
 
 .create-account{
     padding: 3%;
     justify-content: center;
     display: flex;
     background-color: 070718;
-    
 }
+
 .create-account button{
     position: relative;
     margin-left:10px;
@@ -34,68 +30,57 @@
     font-family: serif; 
     font-weight: bold;
     color:#007bff; 
-    /*text-decoration: underline;*/
+    text-decoration: underline;
+    
 }
-
 
 .input{
     width: 350px;
     height: 40px;
     border-color: white;
     padding: 5px;
-
 }
-
 
 .sub-title{
     display: flex;
     color: white;
     padding: 1%;
-    flex-direction: column; /* Cambia a columna para que los grupos estén uno debajo del otro */
+    flex-direction: column; 
     font-size: 17px;
 }
 
 .login-btn{
     background-color: #007bff; 
     color: white; 
-    border-radius: 5px; /* Bordes redondeados */
-    padding: 10px 10px; /* Espaciado interno */
-    font-size: 16px; /* Tamaño de fuente */
+    border-radius: 5px; 
+    padding: 10px 10px; 
+    font-size: 16px; 
     position: relative;
     bottom: 0;
- 
-}
-.condiciones{
-    position: relative;
-    bottom: 0;
-    text-align:right;
-    justify-content: right;
-    
+    margin-top: 15px; 
 }
 
-.checkbox-container{
-    display: flex;
-    align-items: center;  /* Alinea el icono y el texto verticalmente */
-    background-color:transparent;
-    padding: 5px;
-    font-size: 12px;
-    margin-right: 12.2%;
-    width:10%;
-    color: #007bff; 
-    
+.olv-empre{
+   width: 349px;
+   display: flex; 
+   justify-content: space-between;
+   align-items: center; 
 }
-.checkbox-container svg{
-    margin-right: 4%;
-    font-size: 12px;
-   
-}
+
 .boton-olvide{
     display: flex;
-    background-color:transparent;
     font-size: 12px;
-    width:0%;
     color: #007bff;
     position: relative; 
-    margin-left: 4%;
+    text-decoration: underline;    
 }
+
+.boton-registrar-empresa{
+    display: flex;
+    font-size: 12px;
+    color: #007bff;
+    position: relative;
+    text-decoration: underline;
+}
+
 
