--- a/src/paginas/GamePage.css
+++ b/src/paginas/GamePage.css
@@ -1,10 +1,8 @@
-/* Estilos para la página de detalle de juego */
 .game-page-container {
     max-width: 80%;
     margin: 0 auto;
     padding: 10px;
     background-color: #0e141b8e;
-    
 }
 
 .titulo h1 {
@@ -14,57 +12,62 @@
     background-color: #0E141B;
 }
 
-/* Bloque principal que contiene la imagen y la información */
-.bloque-1 {
+.contenedor-sup {
     display: flex;
     justify-content: space-between;
     gap: 40px;
 }
 
-/* Imagen del juego */
 .imagen-juego {
-    max-width: 500px;
-    height: auto;
+    width: 100%; 
+    max-width: 500px; 
+    height: auto; 
     border-radius: 8px;
 }
 
-/* Información del juego */
 .informacion {
     flex-direction: column;
     background-color: #1a1a1a;
-    padding: 20px;
+    padding: 15px;
     border-radius: 8px;
     width: 100%;
     display: flex;
-}
+    font-family: Arial;}
 
-/* Estilos para el desarrollador */
 .informacion h2 {
     justify-content: center;
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 10px;   
+    text-decoration: underline;
+}
+
+.logo-desarrollador{
+    text-align: center;
+    text-decoration: underline;
+    
 }
 
 .developer-logo {
-    max-width: 200px;
-    height: auto;
-    margin-bottom: 20px;
+    max-width: 100px;
+    margin: auto; 
 }
 
-/* Texto descriptivo */
+
 .informacion p {
     font-size: 1rem;
     line-height: 1.6;
-    margin-bottom: 15px;
+    margin-bottom: 2px;
 
 }
+
 .precio{
     width: fit-content;
-    margin-top: auto;
+    margin-top: 5px;
+    font-family: Arial;
 }
 
-/* Botón para agregar al carrito */
-.add-to-cart-btn {
+
+.agregar-carrito{
     background-color: #007bff;
     color: white;
     padding: 10px 20px;
@@ -73,7 +76,230 @@
     top: auto;
     position: relative;
     float: right;
-   
+    width: fit-content;
+    margin-left: auto;
+    cursor: pointer;
 }
+
+.agregar-deseados{
+    width: fit-content;
+    background-color: #4B619B;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border-radius: 5px;
+    float:left;
+    margin-left: auto;
+    cursor: pointer;
+}
+
+.game-details {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    font-family: Arial;
+
+}
+
+.acerca-juego {
+    background-color: #1a1a1a;
+    padding: 15px;
+    border-radius: 8px;
+    
+  
+}
+
+.acerca-juego h2{
+    margin-bottom: 15px;
+    text-decoration: underline;
+    color: #66C0F4;
+}
+
+.requisitos {
+    margin-top: 15px;
+    background-color: #1a1a1a;
+    width: 100%;
+    padding: 15px;
+    font-family: Arial;
+}
+
+.navegacion-requisitos{
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.botones-so {
+    display: flex;
+    justify-content:center; 
+    margin-bottom: 15px;
+    flex: 1; 
+    gap: 10%;
+    
+}
+
+.botones-so button {
+    padding: 1% 2%;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.requisitos-container {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 1%;
+}
+
+.requisitos-container li{
+    margin-bottom: 5%;
+}
+
+.minimos, .recomendados {
+    width: 45%;
+}
+
+.minimos h3, .recomendados h3 {
+    margin-bottom: 5%;
+}
+
+.bloque-inf {
+    display: flex; 
+    gap: 1%;
+}
+
+.izq{
+    width: 70%;
+}
+
+.der{
+    width: 30%;
+    
+}
+
+.etiquetas{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;  
+    background-color: #1a1a1a;
+    font-family: Arial;
+}
+
+.etiquetas h2{
+    margin-bottom: 10px;
+    font-weight: normal;
+    
+}
+
+.etiquetas ul{
+    display: flex;
+    gap: 4%;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.etiquetas li{
+    padding: 1% 1%;
+    background-color: #323233;
+    border-radius: 3px;
+    text-align: center;
+    margin-bottom: 10px;
+    list-style: none; 
+}
+
+.caracteristicas{
+    margin-top: 15px; 
+    background-color: #1a1a1a;
+    font-family: Arial;
+    overflow-x: auto; 
+
+}
+
+.caracteristicas ul{
+    list-style: none; 
+    margin-top: 10px;
+    padding: 10px;
+}
+
+.caracteristicas li{
+    margin-bottom: 10px;  
+    background-color: #151822; 
+    padding: 1% 1%; 
+      
+}
+
+.idiomas {
+    font-family: Arial;
+    background-color: #1a1a1a;
+    margin-top: 15px;
+    padding: 10px;
+    
+}
+
+.idiomas h2 {
+    margin-bottom: 10px; 
+}
+
+.idiomas table {
+    border-collapse: collapse;
+ 
+}
+
+.idiomas th, .idiomas td {
+    padding: 10px;
+    text-align: center;
+    width: 10%;
+}
+
+.idiomas table {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
+.opiniones-container {
+    width: 100%;
+    background-color: #1a1a1a;
+    padding: 10px; 
+    margin-top: 20px; 
+}
+
+.opiniones-container h2{
+    margin-bottom: 10px;
+}
+
+.opiniones {
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px; 
+}
+
+.opinion {
+    border-radius: 5px; 
+    padding: 10px; 
+    background-color: #0E141B 
+}
+
+.opinion p{
+   margin-bottom: 5px;
+}
+
+
+.calificacion-baja {
+    color: red; /* Color rojo para calificaciones 1 y 2 */
+}
+
+.calificacion-media {
+    color: yellow; /* Color amarillo para calificación 3 */
+}
+
+.calificacion-alta {
+    color: green; /* Color verde para calificaciones 4 y 5 */
+}
+
+
 
 
