--- a/src/paginas/Login.css
+++ b/src/paginas/Login.css
@@ -31,6 +31,7 @@
     font-weight: bold;
     color:#007bff; 
     text-decoration: underline;
+   
     
 }
 
@@ -51,13 +52,18 @@
 
 .login-btn{
     background-color: #007bff; 
-    color: white; 
     border-radius: 5px; 
     padding: 10px 10px; 
     font-size: 16px; 
     position: relative;
     bottom: 0;
     margin-top: 15px; 
+    cursor: pointer;
+}
+
+.login-btn a{
+    text-decoration: none;
+    color: white;
 }
 
 .olv-empre{
@@ -65,6 +71,8 @@
    display: flex; 
    justify-content: space-between;
    align-items: center; 
+   
+
 }
 
 .boton-olvide{
@@ -72,7 +80,9 @@
     font-size: 12px;
     color: #007bff;
     position: relative; 
-    text-decoration: underline;    
+    text-decoration: underline;   
+    cursor: pointer;
+ 
 }
 
 .boton-registrar-empresa{
@@ -81,6 +91,8 @@
     color: #007bff;
     position: relative;
     text-decoration: underline;
+    cursor: pointer;
+
 }
 
 
