--- a/src/paginas/Perfil.css
+++ b/src/paginas/Perfil.css
@@ -72,7 +72,9 @@ body {
     gap: 10px; 
     font-family: Arial, sans-serif; 
     background-color: #2c2630;
+    border-radius: 5px;
     
+
 }
 
 
