--- a/src/paginas/Perfil.css
+++ b/src/paginas/Perfil.css
@@ -50,11 +50,13 @@ body {
 .campo {
     display: flex;
     flex-direction: column;
+   
     
 }
 
 .campo label {
     margin-bottom: 5px;
+    display: flex;
 }
 
 .campo input, .campo select {
