--- a/src/paginas/GamePage.css
+++ b/src/paginas/GamePage.css
@@ -180,12 +180,10 @@
 }
 
 .etiquetas{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
     margin-top: 20px;  
     background-color: #1a1a1a;
     font-family: Arial;
+    
 }
 
 .etiquetas h2{
@@ -199,15 +197,17 @@
     gap: 4%;
     justify-content: center;
     flex-wrap: wrap;
+    
 }
 
 .etiquetas li{
     padding: 1% 1%;
-    background-color: #323233;
+    background-color: #2f2f30;
     border-radius: 3px;
     text-align: center;
     margin-bottom: 10px;
     list-style: none; 
+    
 }
 
 .caracteristicas{
