--- a/src/paginas/GamePage.css
+++ b/src/paginas/GamePage.css
@@ -121,6 +121,8 @@
     width: 100%;
     padding: 15px;
     font-family: Arial;
+    border-radius: 8px;
+
 }
 
 .navegacion-requisitos{
@@ -151,6 +153,7 @@
     display: flex;
     justify-content: space-between;
     margin-left: 1%;
+    
 }
 
 .requisitos-container li{
@@ -179,28 +182,29 @@
     
 }
 
-.etiquetas{
+.etiquetasss{
     margin-top: 20px;  
     background-color: #1a1a1a;
     font-family: Arial;
+    border-radius: 8px;
     
+  
 }
 
-.etiquetas h2{
+
+.etiquetasss h2{
     margin-bottom: 10px;
-    font-weight: normal;
-    
+    padding: 10px;
 }
 
-.etiquetas ul{
+.etiquetasss ul{
     display: flex;
     gap: 4%;
     justify-content: center;
-    flex-wrap: wrap;
     
 }
 
-.etiquetas li{
+.etiquetasss li{
     padding: 1% 1%;
     background-color: #2f2f30;
     border-radius: 3px;
@@ -215,6 +219,8 @@
     background-color: #1a1a1a;
     font-family: Arial;
     overflow-x: auto; 
+    padding: 10px;
+    border-radius: 8px;
 
 }
 
@@ -236,7 +242,8 @@
     background-color: #1a1a1a;
     margin-top: 15px;
     padding: 10px;
-    
+    border-radius: 8px;
+
 }
 
 .idiomas h2 {
@@ -265,6 +272,8 @@
     background-color: #1a1a1a;
     padding: 10px; 
     margin-top: 20px; 
+    border-radius: 8px;
+
 }
 
 .opiniones-container h2{
@@ -275,6 +284,7 @@
     display: grid; 
     grid-template-columns: repeat(2, 1fr); 
     gap: 20px; 
+    
 }
 
 .opinion {
