--- a/src/paginas/GamePage.css
+++ b/src/paginas/GamePage.css
@@ -284,7 +284,8 @@
     display: grid; 
     grid-template-columns: repeat(2, 1fr); 
     gap: 20px; 
-    
+    max-height: 200px; /* Altura máxima del contenedor */
+    overflow-y: auto; 
 }
 
 .opinion {
