--- a/src/paginas-empresa/EditGames.css
+++ b/src/paginas-empresa/EditGames.css
@@ -133,3 +133,40 @@ justify-content: space-between;}
     margin-top: 10px;
     text-align: center;
 }
+
+.os-selector {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.os-selector button {
+    padding: 8px 16px;
+    background-color: #333;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.os-selector button.active {
+    background-color: #007bff;
+}
+.requerimientos {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.requerimiento h4 {
+    margin-bottom: 10px;   
+}
+
+.requerimiento input {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    padding: 5px;
+    border-radius: 4px;
+    border: 1px solid #333;
+    background-color: #2c2c2c;
+}
